export const snapshot = {};

snapshot[`user facing logs > given no commits will trigger a release, expect logs to easily communicate that to the user 1`] = `
"
                                           __                             ___
                                          /\\\\ \\\\                          /'___\\\\
                                          \\\\_\\\\ \\\\     __    ___     __   /\\\\ \\\\__/
                                          /'_' \\\\  /'__'\\\\ /'___\\\\ /'__'\\\\ \\\\ \\\\ ,__\\\\
                                         /\\\\ \\\\L\\\\ \\\\/\\\\  __//\\\\ \\\\__//\\\\ \\\\L\\\\.\\\\_\\\\ \\\\ \\\\_/
                                         \\\\ \\\\___,_\\\\ \\\\____\\\\ \\\\____\\\\ \\\\__/.\\\\_\\\\\\\\ \\\\_\\\\\\\\
                                          \\\\/__,_ /\\\\/____/\\\\/____/\\\\/__/\\\\/_/ \\\\/_/
  ========================================================================================================================
                             Calm & reliable automated deployments. No more coffee breaks.
========================================================================================================================
 
Hello! I am a tool called decaf. I help you deploy your projects.
To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.
 
To learn more about the tool: https://github.com/levibostian/decaf/
 
------------------------------------------------------------------------------------------------------------------------
## Setup & environment
------------------------------------------------------------------------------------------------------------------------
 
----------
### Printing environment info...
----------
 
Environment info:
  GitHub repository: levibostian/decaf
  Current git branch: main
  Running in test mode?: false
  Fail on deploy verification: true
  Make pull request comment: true
 
----------
### Setting up git user config...
----------
 
For convenience, I set the git committer name and email, just in case you wanted to make any commits in your deployment commands:
  name: github-actions[bot]
  email: 41898282+github-actions[bot]@users.noreply.github.com
 
----------
### Parsing git commits...
----------
 
DONE: Finished parsing git commits. I found 0 commits on the current branch, main, and 0 commits across all local
      branches that match the branch filters.
 
------------------------------------------------------------------------------------------------------------------------
## Find latest release & git commits made since then
------------------------------------------------------------------------------------------------------------------------
 
----------
### Finding the latest release on the current git branch, main...
----------
 
  \$ mock-command
DONE: I have been told that the latest release on the git branch main is: v1.0.0
 
----------
### Finding all git commits created since the latest release...
----------
 
DONE: I found 1 git commits created since the latest release of v1.0.0.
 
Here are the commits I found since the latest release:
  - chore: does not trigger a release (abc123)
 
------------------------------------------------------------------------------------------------------------------------
## Analyze git commits
------------------------------------------------------------------------------------------------------------------------
 
----------
### Analyzing the git commits one-by-one to determine the next release version...
----------
 
DONE: After analyzing all of the git commits, none of the commits need to be deployed. Therefore, the deployment process
      stops here with no new release to be made. Bye-bye!
 
"
`;

snapshot[`user facing logs > given no commits created since last deployment, expect logs to easily communicate that to the user 1`] = `
"
                                           __                             ___
                                          /\\\\ \\\\                          /'___\\\\
                                          \\\\_\\\\ \\\\     __    ___     __   /\\\\ \\\\__/
                                          /'_' \\\\  /'__'\\\\ /'___\\\\ /'__'\\\\ \\\\ \\\\ ,__\\\\
                                         /\\\\ \\\\L\\\\ \\\\/\\\\  __//\\\\ \\\\__//\\\\ \\\\L\\\\.\\\\_\\\\ \\\\ \\\\_/
                                         \\\\ \\\\___,_\\\\ \\\\____\\\\ \\\\____\\\\ \\\\__/.\\\\_\\\\\\\\ \\\\_\\\\\\\\
                                          \\\\/__,_ /\\\\/____/\\\\/____/\\\\/__/\\\\/_/ \\\\/_/
  ========================================================================================================================
                             Calm & reliable automated deployments. No more coffee breaks.
========================================================================================================================
 
Hello! I am a tool called decaf. I help you deploy your projects.
To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.
 
To learn more about the tool: https://github.com/levibostian/decaf/
 
------------------------------------------------------------------------------------------------------------------------
## Setup & environment
------------------------------------------------------------------------------------------------------------------------
 
----------
### Printing environment info...
----------
 
Environment info:
  GitHub repository: levibostian/decaf
  Current git branch: main
  Running in test mode?: false
  Fail on deploy verification: true
  Make pull request comment: true
 
----------
### Setting up git user config...
----------
 
For convenience, I set the git committer name and email, just in case you wanted to make any commits in your deployment commands:
  name: github-actions[bot]
  email: 41898282+github-actions[bot]@users.noreply.github.com
 
----------
### Parsing git commits...
----------
 
DONE: Finished parsing git commits. I found 0 commits on the current branch, main, and 0 commits across all local
      branches that match the branch filters.
 
------------------------------------------------------------------------------------------------------------------------
## Find latest release & git commits made since then
------------------------------------------------------------------------------------------------------------------------
 
----------
### Finding the latest release on the current git branch, main...
----------
 
  \$ mock-command
DONE: I have been told that the latest release on the git branch main is: v1.0.0
 
----------
### Finding all git commits created since the latest release...
----------
 
DONE: Looks like zero commits have been created since the latest release. This means there is no new code created and
      therefore, the deployment process stops here. Bye-bye!
 
"
`;

snapshot[`user facing logs > given no release has ever been made, expect logs to easily communicate that to the user 1`] = `
"
                                           __                             ___
                                          /\\\\ \\\\                          /'___\\\\
                                          \\\\_\\\\ \\\\     __    ___     __   /\\\\ \\\\__/
                                          /'_' \\\\  /'__'\\\\ /'___\\\\ /'__'\\\\ \\\\ \\\\ ,__\\\\
                                         /\\\\ \\\\L\\\\ \\\\/\\\\  __//\\\\ \\\\__//\\\\ \\\\L\\\\.\\\\_\\\\ \\\\ \\\\_/
                                         \\\\ \\\\___,_\\\\ \\\\____\\\\ \\\\____\\\\ \\\\__/.\\\\_\\\\\\\\ \\\\_\\\\\\\\
                                          \\\\/__,_ /\\\\/____/\\\\/____/\\\\/__/\\\\/_/ \\\\/_/
  ========================================================================================================================
                             Calm & reliable automated deployments. No more coffee breaks.
========================================================================================================================
 
Hello! I am a tool called decaf. I help you deploy your projects.
To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.
 
To learn more about the tool: https://github.com/levibostian/decaf/
 
------------------------------------------------------------------------------------------------------------------------
## Setup & environment
------------------------------------------------------------------------------------------------------------------------
 
----------
### Printing environment info...
----------
 
Environment info:
  GitHub repository: levibostian/decaf
  Current git branch: main
  Running in test mode?: false
  Fail on deploy verification: true
  Make pull request comment: true
 
----------
### Setting up git user config...
----------
 
For convenience, I set the git committer name and email, just in case you wanted to make any commits in your deployment commands:
  name: github-actions[bot]
  email: 41898282+github-actions[bot]@users.noreply.github.com
 
----------
### Parsing git commits...
----------
 
DONE: Finished parsing git commits. I found 0 commits on the current branch, main, and 0 commits across all local
      branches that match the branch filters.
 
------------------------------------------------------------------------------------------------------------------------
## Find latest release & git commits made since then
------------------------------------------------------------------------------------------------------------------------
 
----------
### Finding the latest release on the current git branch, main...
----------
 
DONE: I have been told that the git branch, main, has never been released before. This will be the first release.
      Exciting!
 
----------
### Finding all git commits created since the latest release...
----------
 
DONE: I found 1 git commits created since the git branch main was created.
 
Here are the commits I found since the latest release:
  - feat: trigger a release (trigger-)
 
------------------------------------------------------------------------------------------------------------------------
## Analyze git commits
------------------------------------------------------------------------------------------------------------------------
 
----------
### Analyzing the git commits one-by-one to determine the next release version...
----------
 
  \$ mock-command
DONE: After analyzing all of the git commits, I have determined the next release version will be: 1.0.0
 
------------------------------------------------------------------------------------------------------------------------
## Deploying new release 1.0.0
------------------------------------------------------------------------------------------------------------------------
 
----------
### Running all of your deployment commands...
----------
 
It's time to ship 1.0.0! I will now run all of the deployment commands provided in your project's configuration...
 
DONE: Finished running deployment commands. The deployment should now be complete!
 
----------
### Verifying deployment...
----------
 
Getting the latest release version again to verify that the new release, 1.0.0, was successfully created. If the latest
version does not match, the verification fails, it could indicate a problem with the deployment process.
 
  \$ mock-command
DONE: Verification successful! The latest release is now 1.0.0, which matches the version that was just deployed.
 
------------------------------------------------------------------------------------------------------------------------
## All done!
------------------------------------------------------------------------------------------------------------------------
 
Congratulations! The deployment process has completed. Bye-bye!
 
Summary of deployment:
  New release version: 1.0.0
  Latest release before deployment: This is the first release!
  Branch deployed: main
  Number of commits deployed: 1
  Latest git commit deployed: feat: trigger a release (trigger-)
  Oldest git commit deployed: feat: trigger a release (trigger-)
 
"
`;

snapshot[`user facing logs > given running in test mode, given commits that trigger a release, expect logs to easily communicate that to the user 1`] = `
"
                                           __                             ___
                                          /\\\\ \\\\                          /'___\\\\
                                          \\\\_\\\\ \\\\     __    ___     __   /\\\\ \\\\__/
                                          /'_' \\\\  /'__'\\\\ /'___\\\\ /'__'\\\\ \\\\ \\\\ ,__\\\\
                                         /\\\\ \\\\L\\\\ \\\\/\\\\  __//\\\\ \\\\__//\\\\ \\\\L\\\\.\\\\_\\\\ \\\\ \\\\_/
                                         \\\\ \\\\___,_\\\\ \\\\____\\\\ \\\\____\\\\ \\\\__/.\\\\_\\\\\\\\ \\\\_\\\\\\\\
                                          \\\\/__,_ /\\\\/____/\\\\/____/\\\\/__/\\\\/_/ \\\\/_/
  ========================================================================================================================
                             Calm & reliable automated deployments. No more coffee breaks.
========================================================================================================================
 
Hello! I am a tool called decaf. I help you deploy your projects.
To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.
 
To learn more about the tool: https://github.com/levibostian/decaf/
 
------------------------------------------------------------------------------------------------------------------------
## Prepare environment for pull request event
------------------------------------------------------------------------------------------------------------------------
 
I see that I got triggered from a pull request event. This means that I will still run the full deployment process but I
will not actually make a release. This allows you to safely test the deployment process without affecting the actual
release.
 
----------
### Simulate merging pull requests...
----------
 
In order to accurately test the deployment process, I will simulate what would happen if this pull request and all of
it's parent pull requests get merged. To simulate the merge, I will simply perform a series of git merges in the
temporary environment where I am running. Don't worry, this will not affect your actual pull request or git history!
 
Pull requests merged during simulation::
  - Add sweet feature - #123
  - Update main branch - #124
 
DONE: Simulated merges complete. For the remainder of the deployment process, the current branch will be main instead of
      the pull request branch sweet-feature.
 
------------------------------------------------------------------------------------------------------------------------
## Setup & environment
------------------------------------------------------------------------------------------------------------------------
 
----------
### Printing environment info...
----------
 
Environment info:
  GitHub repository: levibostian/decaf
  Current git branch: main
  Running in test mode?: true
  Fail on deploy verification: true
  Make pull request comment: true
 
----------
### Setting up git user config...
----------
 
For convenience, I set the git committer name and email, just in case you wanted to make any commits in your deployment commands:
  name: github-actions[bot]
  email: 41898282+github-actions[bot]@users.noreply.github.com
 
----------
### Parsing git commits...
----------
 
DONE: Finished parsing git commits. I found 0 commits on the current branch, main, and 0 commits across all local
      branches that match the branch filters.
 
------------------------------------------------------------------------------------------------------------------------
## Find latest release & git commits made since then
------------------------------------------------------------------------------------------------------------------------
 
----------
### Finding the latest release on the current git branch, main...
----------
 
  \$ mock-command
DONE: I have been told that the latest release on the git branch main is: v1.0.0
 
----------
### Finding all git commits created since the latest release...
----------
 
DONE: I found 1 git commits created since the latest release of v1.0.0.
 
Here are the commits I found since the latest release:
  - feat: trigger a release (trigger-)
 
------------------------------------------------------------------------------------------------------------------------
## Analyze git commits
------------------------------------------------------------------------------------------------------------------------
 
----------
### Analyzing the git commits one-by-one to determine the next release version...
----------
 
  \$ mock-command
DONE: After analyzing all of the git commits, I have determined the next release version will be: 1.0.0
 
------------------------------------------------------------------------------------------------------------------------
## Deploying new release 1.0.0
------------------------------------------------------------------------------------------------------------------------
 
----------
### Running all of your deployment commands...
----------
 
It's time to ship 1.0.0! I will now run all of the deployment commands provided in your project's configuration...
 
DONE: Finished running deployment commands. The deployment should now be complete!
 
----------
### Verifying deployment...
----------
 
Getting the latest release version again to verify that the new release, 1.0.0, was successfully created. If the latest
version does not match, the verification fails, it could indicate a problem with the deployment process.
 
  \$ mock-command
DONE: Verification successful! The latest release is now 1.0.0, which matches the version that was just deployed.
 
------------------------------------------------------------------------------------------------------------------------
## All done!
------------------------------------------------------------------------------------------------------------------------
 
Congratulations! The deployment process has completed. Bye-bye!
 
Summary of deployment:
  New release version: 1.0.0
  Latest release before deployment: v1.0.0
  Branch deployed: main
  Number of commits deployed: 1
  Latest git commit deployed: feat: trigger a release (trigger-)
  Oldest git commit deployed: feat: trigger a release (trigger-)
 
"
`;
